# Blockchain-Project

./: .gitignore  README.md  deployment-info.json
contracts/: Cargo.toml
contracts/src/: lib.rs
contracts/test_snapshots/test/: test_unauthorized_yield_accrual.1.json  test_vault_flow.1.json
frontend/: .env.example  deploy.mjs  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: MainFeature.tsx  WalletConnect.tsx
frontend/lib/: contract.ts  stellar.ts
frontend/types/: index.ts
